--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
         <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
         <title>TicTacToe</title>
     </head>
     <body>
@@ -14,24 +15,24 @@
         <div class="container">
 
             <div class="row border-b">
-                <div id="0" class="col border-r"><ion-icon name="refresh-circle-outline"></ion-icon></div>
-                <div id="1" class="col border-r"><ion-icon name="at-circle-outline"></ion-icon></div>
-                <div id="2" class="col"></div>
+                <div onclick="handleClick('0');" id="0" class="col border-r"></div>
+                <div onclick="handleClick('1');" id="1" class="col border-r"></div>
+                <div onclick="handleClick('2');" id="2" class="col"></div>
             </div>
             <div class="row border-b">
-                <div id="3" class="col border-r"></div>
-                <div id="4" class="col border-r"></div>
-                <div id="5" class="col"></div>
+                <div onclick="handleClick('3');" id="3" class="col border-r"></div>
+                <div onclick="handleClick('4');" id="4" class="col border-r"></div>
+                <div onclick="handleClick('5');" id="5" class="col"></div>
             </div>
             <div class="row">
-                <div id="6" class="col border-r"></div>
-                <div id="7" class="col border-r"></div>
-                <div id="8" class="col"></div>
+                <div onclick="handleClick('6');" id="6" class="col border-r"></div>
+                <div onclick="handleClick('7');" id="7" class="col border-r"></div>
+                <div onclick="handleClick('8');" id="8" class="col"></div>
             </div>
         </div>
-        <div class="footer">
-            Bereit zum Spielen!
-            <ion-icon id="reset" name="refresh-circle-outline"></ion-icon>
+        <div class="footer" id="card">
+            <div id="status">Bereit zum Spielen!</div>
+            <ion-icon onclick="reset();" id="reset" name="refresh-circle-outline"></ion-icon>
         </div>
     </body>
 </html>
